--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,15 @@ header .dynamic-arc .desh {
   filter: grayscale(100%);
   justify-self: center;
 }
-
+/* Footer */
+footer .footer-text {
+  margin-top: 120px;
+  margin-bottom: 216px;
+  text-align: center;
+  border-radius: 8px;
+  padding: 30px 0;
+  line-height: 1.5rem;
+}
 /* Responsive area */
 /* Header */
 @media only screen and (max-width: 1040px) {
