--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,41 @@ main > section {
   padding-bottom: 32px;
 }
 
+/* Feature */
+.feature {
+  gap: 100px;
+}
+.feature .feature-title {
+  margin-bottom: 24px;
+}
+.feature .feature-text {
+  max-width: 586px;
+}
+.feature-card {
+  margin-top: 10px;
+  padding: 30px;
+  box-shadow: 0 4px 30px 0 #000000;
+  border-radius: 8px;
+}
+.feature-card .feature-card-title {
+  margin-bottom: 10px;
+}
+.feature-card .feature-card-text {
+  line-height: 1.62rem;
+}
+.feature-img img {
+  width: 100%;
+}
+.feature-btn {
+  padding: 40px;
+  margin-left: -50px;
+  margin-top: -50px;
+}
+.feature-btn .feature-btn-large {
+  font-size: 4rem;
+  color: #ffffff;
+}
+
 /* Facts */
 .facts .facts-content {
   max-width: 542px;
@@ -222,6 +257,16 @@ footer .footer-text {
   .sponsors-logos {
     grid-template-columns: repeat(2, 1fr);
     gap: 50px;
+  }
+  .feature {
+    flex-direction: column;
+  }
+  .feature-btn {
+    margin-left: 0;
+
+    display: block;
+    margin: 0 auto;
+    margin-top: 20px;
   }
 }
 @media only screen and (max-width: 768px) {
